--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!--Bootstrap css-->
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
+    <!--fontawsome icons-->
+    <link rel="stylesheet" href="./css/all.min.css" />
+
     <!-- Custom css file -->
     <link rel="stylesheet" href="./css/styles.css" />
 
