--- a/index.html
+++ b/index.html
@@ -69,6 +69,47 @@
     </header>
     <!-- ===============End Header Area===============================================-->
 
+    <!-- Start main Area-->
+    <main class="site-main">
+      <!-- Start Banner -->
+      <section class="site-banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 site-title">
+              <h3 class="site-title">Hey</h3>
+              <h1 class="title-text text-uppercase">I am Faakeer</h1>
+              <h4 class="title-text text-uppercase">Frontend Developer</h4>
+              <div class="site-buttons">
+                <div class="d-flex flex-row flex-wrap">
+                  <button
+                    type="button"
+                    class="btn button primary-button mr-4 text-uppercase"
+                  >
+                    Hire me
+                  </button>
+                  <button
+                    type="button"
+                    class="btn button secondary-button text-uppercase"
+                  >
+                    Get CV
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 banner-image">
+              <img
+                src="./img/banner/banner-image.png"
+                alt="banner-img"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End  Banner -->
+    </main>
+    <!-- ENd main Area-->
+
     <!-- Jquery file -->
     <script src="./js/jquery.36.0.js"></script>
 
