--- a/index.html
+++ b/index.html
@@ -107,6 +107,50 @@
         </div>
       </section>
       <!-- End  Banner -->
+
+      <!--=======Start About Area ======-->
+      <section class="about-area">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 col-md-12">
+              <div class="about-image">
+                <img
+                  src="./img/about-us.png"
+                  alt="About Us"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 about-title">
+              <h2 class="text-uppercase pt-5">
+                <span>Let me</span>
+                <span>Introduce</span>
+                <span>myself</span>
+              </h2>
+              <div class="paragraph py-4 w-75">
+                <p class="para">
+                  I am a computer science student. I love frontend web
+                  development.
+                </p>
+                <p class="para">
+                  I am working with <code>HTML</code> <code>CSS</code>
+                  <code>JavaScript</code> <code>Bootstrap</code>
+                  <code>Jquery</code>
+                  <br />
+                  Swimming and Gaming is my hobbies.
+                </p>
+              </div>
+              <button
+                type="button"
+                class="btn button primary-button text-uppercase"
+              >
+                Download CV
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--=======End  About Area ======-->
     </main>
     <!-- ENd main Area-->
 
