--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="d-flex flex-row flex-wrap call-area">
                   <span>
-                    <i class="fas fa-phone-alt fa-3x"></i>
+                    <i class="fas fa-phone-alt fa-3x px-3"></i>
                   </span>
                   <div class="call-now">
                     <a href="#" class="text-uppercase h4 font-roboto"
