--- a/index.html
+++ b/index.html
@@ -238,6 +238,43 @@
         </div>
       </section>
       <!-- ========ZEnd Brand Area========-->
+
+      <!-- -==========Start Services Area========== -->
+      <section class="services-offer">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center services-title">
+              <h1 class="text-uppercase title-text">Services Offer</h1>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                numquam asperiores recusandae sapiente eaque quasi est ipsam
+                maxime velit iusto!
+              </p>
+            </div>
+          </div>
+          <div class="container services-list">
+            <div class="row">
+              <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="services">
+                  <div class="services-img text-center py-4">
+                    <img src="./img/services/s2.png" alt="Services-1" />
+                  </div>
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-uppercase font-roboto">
+                      Web Development
+                    </h5>
+                    <p class="card-text text-secondary">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Nulla, ratione.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- -==========End Services Area========== -->
     </main>
     <!-- ENd main Area-->
 
